# star-aligner

./: Cargo.toml  benchmark.md
star-aligner/: Cargo.toml  LICENSE
star-aligner/src/: lib.rs  main.rs  transcript.rs
star-aligner/test/ercc92-1.2.0/star/: genomeParameters.txt
star-sys/: Cargo.toml  build.rs
star-sys/STAR/source/: IncludeDefine.h
